--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,27 +4,84 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
-
-pool:
-  vmImage: 'windows-latest'
-
+- '*'
 variables:
   buildConfiguration: 'Release'
+stages:
+- stage: Build
+  displayName: Build Cars App
+  jobs:
+  - job: Build
+    displayName: Build job
+    pool:
+      vmImage: 'windows-latest'
+    variables:
+      solution: '**/*.sln'
+      buildPlatform: 'x86'
+    steps:
+    - task: NuGetToolInstaller@1
+    - task: NuGetCommand@2
+      inputs:
+        restoreSolution: '$(solution)'
+    - task: VSBuild@1
+      inputs:
+        solution: '$(solution)'
+        msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
+        platform: '$(buildPlatform)'
+        configuration: '$(buildConfiguration)'
+    - task: VSTest@2
+      inputs:
+        platform: '$(buildPlatform)'
+        configuration: '$(buildConfiguration)'
+    - task: CopyFiles@2
+      inputs:
+        contents: '**\$(BuildConfiguration)\**\?(*.exe|*.dll|*.pdb)' 
+        targetFolder: $(Build.ArtifactStagingDirectory)
+    - task: PublishBuildArtifacts@1
+      inputs:
+        pathToPublish: $(Build.ArtifactStagingDirectory)
+        artifactName: MyBuildOutputs
+- stage: Dev
+  displayName: Deploy to the dev environment
+  dependsOn: Build
+  jobs:
+  - deployment: Deploy
+    pool:
+      vmImage: 'windows-latest'
+    environment: dev
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo Deploy to the DEV environment
+- stage: Test
+  displayName: Deploy to the test environment
+  dependsOn: Dev
+  jobs:
+  - deployment: Deploy
+    pool:
+      vmImage: 'windows-latest'
+    environment: test
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo Deploy to the TEST environment
+- stage: Staging
+  displayName: Deploy to the staging environment
+  dependsOn: Test
+  jobs:
+  - deployment: Deploy
+    pool:
+      vmImage: 'windows-latest'
+    environment: staging
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo Deploy to the STAGING environment
 
-steps:
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'restore'
-    feedsToUse: 'select'
-    vstsFeed: 'my-vsts-feed' # A series of numbers and letters
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-    arguments: '--configuration $(buildConfiguration)'
-  displayName: 'dotnet build $(buildConfiguration)'
-
+# ...
 # steps:
 # - script: echo Hello, world!
 #   displayName: 'Run a one-line script'
