--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
     - task: PublishBuildArtifacts@1
       inputs:
         pathToPublish: $(Build.ArtifactStagingDirectory)
-        artifactName: MyBuildOutputs
+        artifactName: CarProjectArtifacts
 - stage: Dev
   displayName: Deploy to the dev environment
   dependsOn: Build
