--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@
 trigger:
 - '*'
 variables:
-  buildConfiguration: 'Release'
+  buildConfiguration: 'Debug'
 stages:
 - stage: Build
   displayName: Build Cars App
